定义api接口&&新增gorm
