# openapi.yaml
@@ -3,17 +3,52 @@
 
 openapi: 3.0.3
 info:
-    title: Greeter API
+    title: Realworld API
     description: The greeting service definition.
     version: 0.0.1
 paths:
-    /helloworld/{name}:
+    /api/users:
+        post:
+            tags:
+                - Realworld
+            operationId: Realworld_Users
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/realworld.v1.UsersRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/realworld.v1.UsersReply'
+    /api/users/login:
+        post:
+            tags:
+                - Realworld
+            operationId: Realworld_Login
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/realworld.v1.LoginRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/realworld.v1.LoginReply'
+    /realworld/{name}:
         get:
             tags:
-                - Greeter
-                - subgroup
+                - Realworld
             description: Sends a greeting
-            operationId: Greeter_SayHello
+            operationId: Realworld_SayHello
             parameters:
                 - name: name
                   in: path
@@ -26,14 +61,63 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/helloworld.v1.HelloReply'
+                                $ref: '#/components/schemas/realworld.v1.HelloReply'
 components:
     schemas:
-        helloworld.v1.HelloReply:
+        realworld.v1.HelloReply:
             type: object
             properties:
                 message:
                     type: string
             description: The response message containing the greetings
+        realworld.v1.LoginReply:
+            type: object
+            properties:
+                user:
+                    $ref: '#/components/schemas/realworld.v1.User'
+        realworld.v1.LoginRequest:
+            type: object
+            properties:
+                user:
+                    $ref: '#/components/schemas/realworld.v1.LoginRequest_User'
+        realworld.v1.LoginRequest_User:
+            type: object
+            properties:
+                email:
+                    type: string
+                password:
+                    type: string
+        realworld.v1.User:
+            type: object
+            properties:
+                email:
+                    type: string
+                token:
+                    type: string
+                username:
+                    type: string
+                bio:
+                    type: string
+                image:
+                    type: string
+        realworld.v1.UsersReply:
+            type: object
+            properties:
+                user:
+                    $ref: '#/components/schemas/realworld.v1.User'
+        realworld.v1.UsersRequest:
+            type: object
+            properties:
+                user:
+                    $ref: '#/components/schemas/realworld.v1.UsersRequest_User'
+        realworld.v1.UsersRequest_User:
+            type: object
+            properties:
+                username:
+                    type: string
+                email:
+                    type: string
+                password:
+                    type: string
 tags:
-    - name: Greeter
+    - name: Realworld
